package functions;

public interface Function {
    double calculate(double x, double eps);
}